--- a/freeplane/resources/translations/Resources_cs.properties
+++ b/freeplane/resources/translations/Resources_cs.properties
@@ -59,6 +59,7 @@ addons.installer.no.scripts=Skripty nenalezeny
 addons.installer.no.zipdata=Nebyla nalezena \u017E\u00E1dn\u00E1 zip data
 addons.installer.nonstandard.permissions=Skript vy\u017Eaduje n\u00E1sleduj\u00EDc\u00ED opr\u00E1vn\u011Bn\u00ED, kter\u00E1 nejsou aktu\u00E1ln\u011B aktivovan\u00E1: {0}.\nMohou b\u00FDt p\u0159id\u00E1na ke standardn\u00EDm opr\u00E1vn\u011Bn\u00EDm?
 addons.installer.one.child.expected=O\u010Dek\u00E1v\u00E1 jednu pod\u0159\u00EDzenou polo\u017Eku {0}, ale obsahuje {1}.
+addons.installer.script.name.suffix=Skript jm\u00E9nem {0} nem\u00E1 p\u0159\u00EDponu ".groovy"
 addons.installer.script.no.execution_mode=Nejsou definov\u00E1ny "execution_mode" atributy pro {0}
 addons.installer.script.no.menulocation=Nejsou definov\u00E1ny "menuLoacation" atributy pro {0}
 addons.installer.script.no.menutitle=Nejsou definov\u00E1ny "menuTitleKey" atributy pro {0}
@@ -255,6 +256,7 @@ dialect_info.warning=Freeplane m\u016F\u017Ee otev\u0159\u00EDt, zobrazit nebo u
 DirectHtmlFlavorHandler=HTML jako jeden uzel
 DocumentationAction.text=Dokumentace
 down=D&ol\u016F
+DownConditionAction.text=Dol\u016F
 download=St\u00E1hnout
 dropped_file_error=Nen\u00ED mo\u017En\u00E9 otev\u0159\u00EDt vlo\u017Een\u00E9 soubory. D\u016Fvod: {0}
 edge=Hrana
@@ -666,6 +668,7 @@ ItalicAction.text=Kurz\u00EDva
 italicise_branch=Nastavit kurz\u00EDvu
 java_version=Java verze: {0}
 JoinNodesAction.text=Spojit uzly
+latex_editor=Editace LaTeX vzorce
 LatexDeleteLatexAction.text=Odstran\u011Bn\u00ED LaTe&X vzorce
 LatexEditLatexAction.text=Editace &LaTeX vzorce...
 LatexInsertLatexAction.text=P\u0159id\u00E1n\u00ED &LaTeX vzorce...
