--- a/freeplane/resources/translations/Resources_de.properties
+++ b/freeplane/resources/translations/Resources_de.properties
@@ -1050,6 +1050,8 @@ OptionPanel.language=Sprache
 OptionPanel.language.tooltip=<html>Dies ist die Sprache, die im Programm verwendet wird. 'Automatisch' bedeutet, dass die Sprache des Benutzers geladen wird, soweit vorhanden.</html>
 OptionPanel.last=Am Ende
 OptionPanel.last_opened_list_length=Anzahl der zuletzt ge\u00f6ffneten Dateien unter Datei -> Zuletzt ge\u00f6ffnete Dateien
+OptionPanel.latex_disable_editor=Deaktiviere den LaTeX Syntax-Highlighting Editor
+OptionPanel.latex_disable_editor.tooltip=Aktiviere diese Option, wenn du Probleme mit dem Syntax-Highlighting-Editor hast.
 OptionPanel.latex_editor_font=Schrift f\u00fcr den LaTeX Syntax-Highlighting Editor
 OptionPanel.latex_editor_font.tooltip=Benutze z.B. 'Dialog' or 'Monospaced' wenn du Unicode-Zeichen benutzt!
 OptionPanel.latex_editor_font_size=Schriftgr\u00f6\u00dfe f\u00fcr den LaTeX Syntax-Highlighting Editor
