--- a/freeplane/resources/translations/Resources_hr.properties
+++ b/freeplane/resources/translations/Resources_hr.properties
@@ -89,7 +89,7 @@ ApplyNoFilteringAction.text=Bez filtriranja
 ApplySelectedViewConditionAction.text=Filtriraj odabrane \u010Dvorove
 ApplyToVisibleAction.text=Primijeni na filtriranim \u010Dvorovima
 as_parent=kao Roditelj
-AskForHelp.text=Upit za pomo\u0107
+AskForHelp.text=Upit za pomo\u0107 na forumu
 AssignAttributesAction.text=Do&djeljivanje obilje\u017Eja...
 attribute_delete=Obri\u0161i sve vrijednosti
 attribute_delete_value=Obri\u0161i ovu vrijednost
@@ -333,8 +333,8 @@ export_failed=Izvoz nije uspio
 export_pdf_text=Portable Document Format (PDF)
 export_svg_text=Scalable Vector Graphic (SVG)
 export_using_xslt=Izvoz Freeplane mape pomo\u0107u XLST skripte
-ExportAction.text=&Izvoz
-ExportBranchAction.text=Grane kao nove Mape
+ExportAction.text=&Izvoz mape\u2026
+ExportBranchAction.text=Razvijanje grane kao nove Mape-\u2026
 ExportBranchToHTMLAction.text=Izvoz grane kao HTML
 exported_file={0} datoteka
 ExportPdf.text=Kao PDF...
@@ -671,6 +671,7 @@ latex_editor=Uredi LaTeX formulu
 LatexDeleteLatexAction.text=Obri\u0161i LaTe&X formulu
 LatexEditLatexAction.text=Uredi LaTe&X formulu...
 LatexInsertLatexAction.msg1=<html>Poku\u0161avate umetnuti <i>staru</i> LaTeX formulu.<br/>Novi na\u010Din stvaranja LaTex teksta/formula opisan je na ovoj stranici:</html>
+LatexInsertLatexAction.msg2=<html>Ukratko: <ul><li>koristite "\\latex " prefiks u tekstu \u010Dvora ili</li><li><i>Pogled->Plo\u010Da oblikovanja</i>, i <i>Tekst \u010Dvora->Predlo\u017Eak/Oblik->Latex</i></li></ul></html>
 LatexInsertLatexAction.text=Dodaj LaTe&X formulu...
 latexPatternFormat=LaTeX
 less_than_two_selected_nodes=Morate odabrati barem dva \u010Dvora
@@ -768,6 +769,7 @@ menu_nodes=&\u010Cvor
 menu_nodeView=\u010Cvor
 menu_notes=Bilje\u0161ka
 menu_noteView=Bilje\u0161ke
+menu_openmaps=Mape
 menu_progress=Napredak
 menu_remove_icons=Ukloni ikone
 menu_removeAttribute=Ukloni obilje\u017Eje
@@ -839,7 +841,7 @@ no_copy_attributes_before_paste_attributes=Ne mo\u017Eete zalijepiti obilje\u017
 NO_FORMAT=Tekst
 no_format_copy_before_format_paste=Ne mo\u017Eete zalijepiti oblik ako ga prethodno niste kopirali.
 no_found_from=<html>Nije<u>{0}</u>\nmogu\u0107e na\u0107i "{1}".
-no_more_found_from=<html>Nijedan <u>{0}</u>\nvi\u0161e nije na\u0111en u "{1}".
+no_more_found_from=<html>Nijedan <u>{0}</u>vi\u0161e nije na\u0111en u "{1}".</html>
 no_previous_find=Nema podatka tra\u017Eenja.
 no_styles_found_in_map=Nisu prona\u0111eni stilovi u mapi
 node=\u010Cvor
@@ -848,7 +850,7 @@ node_is_write_protected=Ciljni \u010Dvor je za\u0161ti\u0107en od pisanja.
 node_location_help=Povla\u010Denje mijenja poziciju \u010Dvora, ctrl+povla\u010Denje mijenja razmak, dvostruki klik i ctrl+dvostruki klik vra\u0107a \u010Dvor u prvobitnu poziciju
 node_selector=Odabir \u010Dvora
 node_selector_message=Dvostruki klik za odabir \u010Dvora
-node_styles=Stil \u010Dvora:
+node_styles=Stil \u010Dvora
 NodeBackgroundColorAction.text=&Pozadinska boja \u010Dvora...
 NodeColorAction.text=Boja teksta \u010Dvora...
 NodeColorBlendAction.text=Pomije\u0161aj boje
@@ -933,7 +935,7 @@ OptionPanel.compare_as_number=Usporedi kao brojeve
 OptionPanel.convert_to_current_version=<html>\u017Delite li automatsko pretvaranje mapa starih verzija Freeplanea <br>u trenutnu verziju?</html>
 OptionPanel.convert_to_current_version.tooltip=<html>Samo za vrlo velike mape za koje nije potrebno pretvaranje <br>(a za to je potrebno stru\u010Dno znanje), mo\u017Eete otvarati bez pretvaranja.</html>
 OptionPanel.cs=\u010Ce\u0161ki
-OptionPanel.cut_nodes_without_question=Izre\u017Ei \u010Dvor(ove) bez potvrde.
+OptionPanel.cut_nodes_without_question=Izrati \u010Dvor(ove) bez potvrde?
 OptionPanel.cut_nodes_without_question.tooltip=Ako je polje odabrano \u010Dvorovi \u0107e biti izrezani bez potvrde. Ovo mo\u017Ee prouzro\u010Diti gubitak informacija ukoliko nismo pa\u017Eljivi kod brisanja.
 OptionPanel.da=Danski
 OptionPanel.date_format=Standardni oblik datuma
@@ -1005,7 +1007,7 @@ OptionPanel.fold_on_click_inside=Rasklopi na klik unutar \u010Dvora
 OptionPanel.foldingsymbolwidth=Veli\u010Dina simbola (kru\u017Ei\u0107a) sklopljenog \u010Dvora.
 OptionPanel.foldingsymbolwidth.tooltip=<html>Veli\u010Dina kruga koji ozna\u010Dava sklapanje stabla</html>
 OptionPanel.fork=Ra\u010Dva
-OptionPanel.format_locale=Regija:
+OptionPanel.format_locale=Regija
 OptionPanel.format_locale.tooltip=Lokalne postavke za oblikovanje i analiziranje podataka
 OptionPanel.formula_disable_caching=Onemogu\u0107i memorijski prostor za izra\u010Dunavanje formule
 OptionPanel.formula_disable_plugin=Onemogu\u0107i dodatak za izradu formula
@@ -1038,7 +1040,7 @@ OptionPanel.il__enter_confirms_by_default="Enter" kao standardna potvrda unosa
 OptionPanel.image_cache=Za slike
 OptionPanel.it=Talijanski
 OptionPanel.ja=Japanski
-OptionPanel.key_type_action=Unos tipkovnicom:
+OptionPanel.key_type_action=Unos tipkovnicom
 OptionPanel.Keystrokes=Tipkovni\u010Dke kratice
 OptionPanel.ko=Korejski
 OptionPanel.label_font_family=Oblik slova
@@ -1064,7 +1066,7 @@ OptionPanel.lookandfeel.tooltip=<html>'Izgled i ugo\u0111aj' koji \u0107e biti u
 OptionPanel.lt=Litvanski
 OptionPanel.max_displayed_node_count=Maksimalni broj prikazanih \u010Dvorova
 OptionPanel.max_image_width=Po\u010Detna \u0161irina slike
-OptionPanel.max_image_width.tooltip=Umetnute slike umanjene su na tu \u0161irinu
+OptionPanel.max_image_width.tooltip=Umetnute slike umanjene su na tu \u0161irinu.
 OptionPanel.max_menu_item_count=Maksimalan broj stavki izbornika
 OptionPanel.max_menu_item_count.tooltip=Ograni\u010Denje broja stavki ako je jedan podizbornik, najmanje 10
 OptionPanel.max_node_width=Maksimalna \u0161irina \u010Dvora (pikseli)
@@ -1129,7 +1131,7 @@ OptionPanel.RECT=Pravokutnik
 OptionPanel.relative=Relativne
 OptionPanel.remind_type_of_new_nodes.tooltip=<html>"Pitaj"  (use in doubt).<br>"Da" prika\u017Ei ure\u0111iva\u010D za bolje oblikovanje teksta .<br>"Ne" prika\u017Ei jednostavni tekstualni ure\u0111iva\u010D.</html>
 OptionPanel.remind_use_rich_text_in_new_nodes=Koristi bolje oblikovani tekst za zaljepljene \u010Dvorove
-OptionPanel.remove_notes_without_question=Obri\u0161i bilje\u0161ke bez upita.
+OptionPanel.remove_notes_without_question=Obrisati bilje\u0161ke bez upita?
 OptionPanel.remove_notes_without_question.tooltip=Ako je polje odabrano pripadaju\u0107e bilje\u0161ke odabranog \u010Dvora bit \u0107e obrisane bez potvrde.Ovo mo\u017Ee prouzro\u010Diti gubitak informacija ukoliko nismo pa\u017Eljivi kod brisanja.
 OptionPanel.resources_use_default_font_for_notes_too=Koristi zadani font za bilje\u0161ke
 OptionPanel.resources_use_margin_top_zero_for_notes=Makni gornju marginu kod bilje\u017Eaka
@@ -1140,11 +1142,12 @@ OptionPanel.ru=Ruski
 OptionPanel.save_folding=Spremi strukturu stabla
 OptionPanel.save_folding_if_map_is_changed=Samo ako je mapa promijenjena
 OptionPanel.save_modification_times=Spremi vrijeme promijene
-OptionPanel.script_classpath=Arhive classes skripta ili JARs ( vidi opis alata)
+OptionPanel.script_classpath=Dodatni direktoriji sa classes skriptama ili JARs ( vidi opis alata)
 OptionPanel.script_classpath.tooltip=<html>Lista mapa (Folder) koje sadr\u017Ee skripte classpath, formula ili JARs.<br>Koristi ; (Windows) ili : (Linux, Mac) za odvajanje unosa.<br>Frepplane \u0107e provjeravati postojanje JAR ili .class datoteka.<br>Putanje koje nisu apsolutne, biti \u0107e usmjerene na korisni\u010Dku mapu Freeplane (.freeplane)y.<br>Ako postavite classpath morate omogu\u0107iti izvr\u0161avanje skripti!</html>
 OptionPanel.script_compilation_disabled_extensions=Na stavci datoteka ne\u0107e biti sastavljeni (pogledaj opis alata)
+OptionPanel.script_compilation_disabled_extensions.tooltip=<html> Ako sve skripte pored instaliranog jezika (osim <br> Groovy i JavaScript) imaju problem sa kompilacijom  <br> poku\u0161ajte dodati nastavak datoteke(zarezom odvojene liste). </ html>
 OptionPanel.script_directories=Arhive skripta (vidi opis alata)
-OptionPanel.script_directories.tooltip=<html>Lista mapa (Folder) koje sadr\u017Ee.<br>Koristi ; (Windows) ili : (Linux, Mac) za odvajanje unosa.<br>Putanje koje nisu apsolutne, biti \u0107e usmjerene na korisni\u010Dku mapu Freeplane (.freeplane).</html>
+OptionPanel.script_directories.tooltip=<html>Lista direktorija koje sadr\u017Ee skripte (osim standardne "scripts") .<br>Koristi ; (Windows) ili : (Linux, Mac) za odvajanje unosa.<br>Putanje koje nisu apsolutne, biti \u0107e usmjerene na korisni\u010Dku mapu Freeplane (.freeplane).</html>
 OptionPanel.script_user_key_name_for_signing=Neobavezni korisni\u010Dki klju\u010D (pseudonim) za potpisivanje
 OptionPanel.script_user_key_name_for_signing.tooltip=<html>\u017Delite li potpisati svoju skriptu, unesite pseudonim (izmi\u0161ljeni klju\u010D) ovdje. <br>Lozinka je pohranjena u bazu klju\u010Deva. <br>Lozinaka klju\u010Dnog tajnog klju\u010Da mora se podudarati s lozinkom u bazi klju\u010Deva (to je zadano).</html>
 OptionPanel.scrollbar_increment=Brzina
@@ -1440,11 +1443,11 @@ ResetStyleAction.text=Vrati izvorni stil \u010Dvora
 RevertAction.text=O&tvori ponovno
 RevisionPluginAction.text=Prika\u017Ei promijenjen \u010Dvor u &boji
 save_failed=Poku\u0161aj spremanja mape  {0} nije uspjelo.
-save_unsaved=\u017Delite li spremiti slijede\u0107u Mentalnu mapu?:
+save_unsaved=\u017Delite li spremiti slijede\u0107u Mentalnu mapu?
 save_unsaved_styles=\u017Delite li spremiti stilove?
-SaveAcceleratorPresetsAction.text=Pohrana grupe tipkovni\u010Dkih kratica F-trake
+SaveAcceleratorPresetsAction.text=Pohrana grupe tipkovni\u010Dkih kratica F-trake\u2026
 SaveAction.text=&Spremi
-SaveAll.text=Spremi &sve
+SaveAll.text=Spremi &sve otvoerne datoteke
 SaveAll.tooltip=Spremi sve otvorene mape.
 SaveAsAction.text=Spremi kao...
 saved=Spremljeno
@@ -1474,10 +1477,10 @@ selection_method_delayed=Zaka\u0161njela automatska metoda odabira
 selection_method_direct=Prika\u017Ei odabrano
 SelectNoteAction.text=Prelazak iz bilje\u0161ke u \u010Dvor
 SelectNoteAction.tooltip=Prebaci iz bilje\u0161ke u \u010Dvor
-set_accelerator_on_next_click_action=Kliknite na bilo koju stavku izbornika za dodjelu nove tipkovni\u010Dke kratice
+set_accelerator_on_next_click_action=Za kreiranje nove tipkovni\u010Dke kratice: dr\u017Eite pritisnutu 'Ctrl' tipku za vrijeme odabira stavke izbornika.
 SetAccelerator.dialogTitle=Dodjeljivanje tipkovni\u010Dkih kratica
 SetAccelerator.keystrokeDetected=Tipkovni\u010Dka kratica ''{0}''nije dodana niti jednoj stavci izbornika.
-SetAcceleratorOnNextClickAction.text=Pridru\u017Ei tipkovni\u010Dku kraticu
+SetAcceleratorOnNextClickAction.text=Pridru\u017Ei tipkovni\u010Dku kraticu\u2026
 SetImageByFileChooserAction.text=Slike (Pretra\u017Eiva\u010D datoteka ili veza)...
 SetLinkAnchorAction.text=Postavi sidro veze (linka)
 SetLinkAnchorAction.tooltip=<html>postavi ozna\u010Deni \u010Dvor kao sidro za budu\u0107e <br/>stvaranje lokalnih ili globalnih veza (linkova).
@@ -1693,7 +1696,7 @@ stop_processing=Stop
 StringFlavorHandler=Obi\u010Dan tekst kao hijerarhija \u010Dvorova
 StructuredHtmlFlavorHandler=HTML kao hijerarhija \u010Dvorova
 style=Stil
-style_already_exists=Stil ve\u0107 postoji!
+style_already_exists=Stil ve\u0107 postoji.
 styledialog.cancel.text=Otka\u017Ei
 styledialog.ok.text=U redu
 styles=St&ilovi
