--- a/freeplane/resources/translations/Resources_pt_BR.properties
+++ b/freeplane/resources/translations/Resources_pt_BR.properties
@@ -89,7 +89,7 @@ ApplyNoFilteringAction.text=Sem filtragem
 ApplySelectedViewConditionAction.text=Filtra os n\u00F3s selecionados
 ApplyToVisibleAction.text=Aplica-se aos n\u00F3s filtrados
 as_parent=Como pai
-AskForHelp.text=Pedir ajuda
+AskForHelp.text=Pedir ajuda no f\u00F3rum
 AssignAttributesAction.text=Encontrar e substituir atributos...
 attribute_delete=Apagar todos os valores
 attribute_delete_value=Apagar este valor
@@ -668,7 +668,7 @@ ItalicAction.text=It\u00E1lica
 italicise_branch=It\u00E1lico
 java_version=Vers\u00E3o do java: {0}
 JoinNodesAction.text=Unir n\u00F3s
-latex_editor=Editar f\u00F3rmula LaTeX
+latex_editor=Editor LaTeX
 LatexDeleteLatexAction.text=Remover f\u00F3rmula LaTeX
 LatexEditLatexAction.text=Editar f\u00F3rmula &LaTeX...
 LatexInsertLatexAction.msg1=<html>Voc\u00EA est\u00E1 tentando inserir uma f\u00F3rmula <i>legacy</i> do LaTeX.<br/> A nova maneira de se criar um texto ou f\u00F3rmula LaTeX est\u00E1 descrito na p\u00E1gina: </html>
@@ -907,7 +907,7 @@ OptionPanel.antialias_none=Sem suaviza\u00E7\u00E3o
 OptionPanel.Appearance=Apar\u00EAncia
 OptionPanel.apply_system_screen_resolution=Aplicar a resolu\u00E7\u00E3o de tela padr\u00E3o do sistema
 OptionPanel.approximate_search_threshold=princ\u00EDpio de correspond\u00EAncia aproximada
-OptionPanel.approximate_search_threshold.tooltip=<html>Limite para correspond\u00EAncia aproximada<br/><font size="2">consulte http://freeplane.sf.net/wiki/index.php/Approximate_search</font><br/>(quanto maior as varia\u00E7\u00F5es<br/>o termo encontrado ser\u00E1 menor)</html>
+OptionPanel.approximate_search_threshold.tooltip=<html>Limite para correspond\u00EAncia aproximada<br/><font size="2">consulte http://freeplane.sf.net/wiki/index.php/Approximate_search</font><br/>(quanto maior as varia\u00E7\u00F5es menor<br/>ser\u00E1 o termo encontrado)</html>
 OptionPanel.ar=\u00C1rabe
 OptionPanel.ARC=Arco
 OptionPanel.as_parent=Como pai
@@ -974,7 +974,7 @@ OptionPanel.edgewidth.tooltip=Propriedade da borda do n\u00F3 pai (tamb\u00E9m s
 OptionPanel.EDIT_CURRENT=Substituir o conte\u00FAdo
 OptionPanel.edit_on_double_click=Duplo clique para editar
 OptionPanel.editor_extra_width=Pr\u00F3xima largura extra
-OptionPanel.editor_extra_width.tooltip=<html>Determina o n\u00FAmero de pixels para incrementar largura de um n\u00F3 caso o texto extende largura atual.</html>
+OptionPanel.editor_extra_width.tooltip=<html>Determina o n\u00FAmero de pixels para incrementar a largura de um n\u00F3 caso o texto extende largura atual.</html>
 OptionPanel.el=Grego
 OptionPanel.el__buttons_above=Bot\u00F5es na parte superior
 OptionPanel.el__enter_confirms_by_default=Enter confirma por padr\u00E3o
@@ -1126,7 +1126,7 @@ OptionPanel.plugins=Plugins
 OptionPanel.presentation_dimmer_transparency=Apresenta\u00E7\u00E3o redutor de transpar\u00EAncia
 OptionPanel.presentation_mode=Modo de apresenta\u00E7\u00E3o
 OptionPanel.printonwhitebackground=<html>Fundo branco para impress\u00E3o</html>
-OptionPanel.printonwhitebackground.tooltip=<html>Sempre usar o fundo branco para impress\u00E3o</html>
+OptionPanel.printonwhitebackground.tooltip=<html>Sempre usar fundo branco para impress\u00E3o</html>
 OptionPanel.pt_BR=Portugu\u00EAs brasileiro
 OptionPanel.pt_PT=Portugu\u00EAs portugal
 OptionPanel.RECT=Ret\u00E2ngulo
@@ -1429,7 +1429,7 @@ RemoveFormatAction.text=Remover formato
 RemoveIcon_0_Action.text=Remover o primeiro \u00EDcone
 RemoveIconAction.text=Remover \u00FAltimo \u00EDcone
 RemoveNoteAction.text=Remover nota
-RemoveNoteAction.tooltip=<html>Remover o conte\u00FAdo da nota de, possivelmente, v\u00E1rias notas,</html>
+RemoveNoteAction.tooltip=<html>Remover o conte\u00FAdo de possivelmente v\u00E1rias notas.</html>
 rename=&Renomear
 repair_link=Recuperar link
 repair_link_question=N\u00E3o foi possivel carregar o mapa referenciado. Corrigir a refer\u00EAncia manualmente?
@@ -1609,7 +1609,7 @@ simplyhtml.listTypeUpperAlpha=A.,B.,C.,D.
 simplyhtml.listTypeUpperRoman=I.,II.,III.,IV.
 simplyhtml.marginLabel=Exterior
 simplyhtml.matchApproximately=Corresponder aproximadamente
-simplyhtml.matchApproximately.tooltip=<html>Deseja permitir correspond\u00EAncias semelhantes, por exemplo,<br/> pesquisando por 'files' encontrar\u00E1 'flies'.</html>
+simplyhtml.matchApproximately.tooltip=<html>Deseja permitir buscas similares, por exemplo,<br/> pesquisando por 'files' encontrar\u00E1 'flies'.</html>
 simplyhtml.matchCase=Diferenciar mai\u00FAsculas de min\u00FAsculas
 simplyhtml.matchCase.tooltip=Se deseja honrar o caso ao fazer a correspond\u00EAncia.
 simplyhtml.newStyleDefaultName=Novo estilo
