--- a/freeplane/resources/translations/Resources_pt_PT.properties
+++ b/freeplane/resources/translations/Resources_pt_PT.properties
@@ -9,7 +9,7 @@ accessories/plugins/EncryptNode.properties_1=As palavras-passe s\u00E3o muito cu
 accessories/plugins/EncryptNode.properties_2=Palavra-passe:
 accessories/plugins/EncryptNode.properties_3=Repita a palavra-passe:
 accessories/plugins/EncryptNode.properties_4=Introduza a sua palavra-passe.
-accessories/plugins/EncryptNode.properties_5=<html>Lembre-se que a for\u00E7a da encripta\u00E7\u00E3o<br> est\u00E1 directamente relacionada com a qualidade da sua palavra-passe.
+accessories/plugins/EncryptNode.properties_5=<html>Lembre-se que a for\u00E7a da encripta\u00E7\u00E3o<br> est\u00E1 diretamente relacionada com a qualidade da sua palavra-passe.
 accessories/plugins/EncryptNode.properties_6=Aceitar
 accessories/plugins/EncryptNode.properties_7=Cancelar
 accessories/plugins/EncryptNode.properties_insert_encrypted_node_first=S\u00F3 pode alternar o estado de encripta\u00E7\u00E3o de um n\u00F3 j\u00E1 encriptado. Insira um n\u00F3 encriptado a partir do menu Ferramentas.
@@ -58,7 +58,7 @@ addons.installer.missing.translation=Tradu\u00E7\u00E3o de {0} em falta para o i
 addons.installer.no.scripts=N\u00E3o foram encontrados scripts
 addons.installer.no.zipdata=N\u00E3o foram encontrados dados comprimidos
 addons.installer.nonstandard.permissions=O script pede as seguintes permiss\u00F5es que n\u00E3o est\u00E3o actualmente activadas: {0}.\nQuer adicion\u00E1-las \u00E0s permiss\u00F5es padr\u00E3o?
-addons.installer.one.child.expected=S\u00F3 se esperava um filho de {0} mas h\u00E1 {1}.
+addons.installer.one.child.expected=S\u00F3 se esperava um n\u00F3-filho de {0} mas h\u00E1 {1}.
 addons.installer.script.name.suffix=O nome do script {0} n\u00E3o tem um sufixo como ".groovy"
 addons.installer.script.no.execution_mode=Atributo "execution_mode" n\u00E3o definido para {0}
 addons.installer.script.no.menulocation=Atributo "menuLocation" n\u00E3o definido para {0}
@@ -67,8 +67,8 @@ addons.installer.script.no.permissions=Permiss\u00F5es n\u00E3o definidas para {
 addons.installer.success=Instala\u00E7\u00E3o com sucesso.\nO novo suplemento estar\u00E1 dispon\u00EDvel depois de reiniciar.
 addons.installer.success.update=Actualiza\u00E7\u00E3o de {0} para {1} com sucesso.\nAlgumas fun\u00E7\u00F5es poder\u00E3o s\u00F3 estar dispon\u00EDveis ap\u00F3s reiniciar.
 addons.installer.title=Instalador de suplementos
-addons.installer.too.new=A sua vers\u00E3o do Freeplane \u00E9 demasiado nova. Este suplemento suporta no m\u00E1ximo a {1}
-addons.installer.too.old=A sua vers\u00E3o do Freeplane \u00E9 demasiado antiga. Este suplemento requer pelo menos a {1}
+addons.installer.too.new=A sua vers\u00E3o do Freeplane {0} \u00E9 demasiado nova. Este suplemento suporta no m\u00E1ximo a {1}
+addons.installer.too.old=A sua vers\u00E3o do Freeplane {0} \u00E9 demasiado antiga. Este suplemento requer pelo menos a {1}
 addons.installer.unknown.deinstallation.rules=Regras de desinstala\u00E7\u00E3o {0} desconhecidas
 addons.installer.update=Actualizar da vers\u00E3o {0}
 addons.installer.warning=<html><body><strong style="color: red; font-size: 9px">S\u00F3 deve instalar suplementos de fontes seguras. Programas maliciosos podem danificar os seus dados ou violar a sua privacidade.</strong></body></html>
@@ -79,7 +79,7 @@ AllMapsNodeListAction.text=Localizar e substituir em todos os mapas
 always=Sempre
 AlwaysUnfoldedNodeAction.text=N\u00F3 sempre desdobrado (Definir/repor)
 antialias_all=Uniformizar tudo
-antialias_edges=Uniformizar limites
+antialias_edges=Uniformizar liga\u00E7\u00F5es
 antialias_none=N\u00E3o uniformizar
 apply=&Aplicar
 ApplyAction.text=&Aplicar
@@ -89,7 +89,7 @@ ApplyNoFilteringAction.text=Sem filtragem
 ApplySelectedViewConditionAction.text=Filtrar os n\u00F3s seleccionados
 ApplyToVisibleAction.text=Aplica-se aos n\u00F3s filtrados
 as_parent=Como n\u00F3-m\u00E3e
-AskForHelp.text=Pedir ajuda
+AskForHelp.text=Pedir ajuda no f\u00F3rum
 AssignAttributesAction.text=Localizar e substituir atributos...
 attribute_delete=Apagar todos os valores
 attribute_delete_value=Apagar este valar
@@ -269,7 +269,7 @@ EdgeStyleAction.bezier.tooltip=<html>Mostrar o limite como curva suave</html>
 EdgeStyleAction.hide_edge.text=Ocultar limite
 EdgeStyleAction.hide_edge.tooltip=<html>Para os n\u00F3s seleccionados, mostrar limite como<br>linha pontilhada. Sen\u00E3o ocultar o limite.</html>
 EdgeStyleAction.horizontal.text=Horizontal
-EdgeStyleAction.horizontal.tooltip=<html>Usar linhas rectas perpendiculares para os limites.</html>
+EdgeStyleAction.horizontal.tooltip=<html>Usar linhas rectas perpendiculares para as liga\u00E7\u00F5es.</html>
 EdgeStyleAction.linear.text=Linear
 EdgeStyleAction.linear.tooltip=<html>Mostrar o limite como linha recta</html>
 EdgeStyleAction.sharp_bezier.text=Curva afiada (B\u00E9zier)
@@ -314,7 +314,7 @@ enter_map_url=Introduza a URL do mapa
 enter_new_style_name=Introduza o nome do novo estilo
 enter_node_id=Introduza a ID do n\u00F3
 enter_zoom=Introduza a amplia\u00E7\u00E3o
-EnterPassword.text=Introduza palavra-passe
+EnterPassword.text=Introduzir palavra-passe
 error=Erro
 error_applying_template=Erro ao aplicar o modelo XSL.
 error_creating_directory=Imposs\u00EDvel criar a pasta para exporta\u00E7\u00E3o.
@@ -446,7 +446,7 @@ FitToPage.text=Ampliar \u00E0 p\u00E1gina
 FitToPage.tooltip=Ajusta a amplia\u00E7\u00E3o para que o mapa caiba todo na janela.
 fold=Dobrar
 FoldAllAction.text=Dobrar todos
-FoldAllAction.tooltip=<html>Dobra os n\u00F3s seleccionados e todos os seus filhos.</html>
+FoldAllAction.tooltip=<html>Dobra os n\u00F3s seleccionados e todos os seus n\u00F3s-filho.</html>
 FoldOneLevelAction.text=Dobrar um n\u00EDvel
 FoldOneLevelAction.tooltip=<html>Dobra os n\u00F3s seleccionados um n\u00EDvel.</html>
 follow_graphical_link=Ir para:
@@ -677,7 +677,7 @@ LatexInsertLatexAction.text=Adicionar f\u00F3rmula &LaTex...
 latexPatternFormat=LaTex
 less_than_two_selected_nodes=Tem de seleccionar pelo menos dois n\u00F3s para criar links.
 license=Licen\u00E7a: GPL 2 ou posterior
-license_text=<html>Este programa \u00E9 gr\u00E1tis; pode redistribui-lo e/ou<br>modific\u00E1-lo sob os termos da GNU General Public License<br>como publicado pela Free Software Foundation; seja a vers\u00E3o 2<br>da Licen\u00E7a, ou (por escolha sua) outra vers\u00E3o posterior.<br><br>Este programa \u00E9 distribu\u00EDdo na esperan\u00E7a de que seja \u00FAtil,<br>mas SEM QUALQUER GARANTIA; sem sequer a garantia impl\u00EDcita de<br>VALOR COMERCIAL ou SERVIR UM PROP\u00D3SITO PARTICULAR. Veja a<br>GNU General Public License para mais detalhes.<br><br>Dever\u00E1 ter recebido uma c\u00F3pia da GNU General Public License<br>juntamente com este programa; se n\u00E3o, escreva para Free Software<br>Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
+license_text=<html>Este programa \u00E9 gratuito; pode redistribui-lo e/ou<br>modific\u00E1-lo sob os termos da licen\u00E7a p\u00FAblica geral - GNU General Public License<br>como publicado pela Free Software Foundation; seja a vers\u00E3o 2<br>da Licen\u00E7a, ou (por escolha sua) outra vers\u00E3o posterior.<br><br>Este programa \u00E9 distribu\u00EDdo na esperan\u00E7a de que seja \u00FAtil,<br>mas SEM QUALQUER GARANTIA; sem sequer a garantia impl\u00EDcita de<br>VALOR COMERCIAL ou SERVIR UM PROP\u00D3SITO PARTICULAR. Veja a<br>GNU General Public License para mais detalhes.<br><br>Dever\u00E1 ter recebido uma c\u00F3pia da GNU General Public License<br>juntamente com este programa; se n\u00E3o, escreva para Free Software<br>Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
 link_error=Liga\u00E7\u00E3o incorrecta, {0} n\u00E3o carregado
 link_not_available_any_more=A liga\u00E7\u00E3o j\u00E1 n\u00E3o \u00E9 v\u00E1lida. O n\u00F3 foi eliminado no meio tempo.
 link_not_found=Liga\u00E7\u00E3o {0} n\u00E3o encontrada.
@@ -902,7 +902,7 @@ OptionPanel.always_unfold_all_after_load=Desdobrar todos
 OptionPanel.antialias=Suaviza\u00E7\u00E3o
 OptionPanel.antialias.tooltip=<html>Determina a qualidade do mapa. Mais suaviza\u00E7\u00E3o demora mais tempo.</html>
 OptionPanel.antialias_all=Suaviza\u00E7\u00E3o total
-OptionPanel.antialias_edges=Limites suavizados
+OptionPanel.antialias_edges=Liga\u00E7\u00F5es suavizadas
 OptionPanel.antialias_none=Sem suaviza\u00E7\u00E3o
 OptionPanel.Appearance=Apar\u00EAncia
 OptionPanel.apply_system_screen_resolution=Aplicar a resolu\u00E7\u00E3o predefinida do ecr\u00E3
@@ -1016,6 +1016,9 @@ OptionPanel.fr=Franc\u00EAs / Fran\u00E7ais
 OptionPanel.gl=Galego / Galego
 OptionPanel.goto_note_end_on_edit=Mover cursor para o final nas notas
 OptionPanel.grid_size=Tamanho do intervalo da grelha
+OptionPanel.groovy_editor_font=Tipo de letra do editor Groovy Syntax Highlighting
+OptionPanel.groovy_editor_font.tooltip=Utilize 'Di\u00E1logo' ou 'Mono-espa\u00E7o' se precisar de caracteres unicode!
+OptionPanel.groovy_editor_font_size=Tamanho da letra para o editor Groovy Syntax Highlighting
 OptionPanel.gtk=Gtk
 OptionPanel.hide_edge=Ocultar limite
 OptionPanel.highlight_formulas=Real\u00E7ar f\u00F3rmulas
@@ -1050,6 +1053,9 @@ OptionPanel.language=Idioma
 OptionPanel.language.tooltip=<html>Este \u00E9 o idioma usado pelo programa. 'autom\u00E1tico' tentar\u00E1 carregar o idioma actual do utilizador. </html>
 OptionPanel.last=\u00DAltimo
 OptionPanel.last_opened_list_length=Tamanho da \u00FAltima lista aberta
+OptionPanel.latex_editor_font=Tipo de letra do editor LaTex Syntax Highlighting
+OptionPanel.latex_editor_font.tooltip=Usar 'Di\u00E1logo' ou 'Mono-espa\u00E7o' se precisa de s\u00EDmbolos Unicode!
+OptionPanel.latex_editor_font_size=Tamanho da letra do editor LaTex Syntax Highlighting
 OptionPanel.latex_macros=Macros LaTex comuns
 OptionPanel.layout_map_on_text_change=Disposi\u00E7\u00E3o do mapa durante a edi\u00E7\u00E3o
 OptionPanel.layout_map_on_text_change.tooltip=Desactivar para melhor performance
@@ -1151,7 +1157,7 @@ OptionPanel.script_compilation_disabled_extensions.tooltip=<html>Se todos os scr
 OptionPanel.script_directories=Caminho de procura de scripts (ver sugest\u00E3o)
 OptionPanel.script_directories.tooltip=<html>Uma lista de pastas (em adi\u00E7\u00E3o a "scripts").<br>Use ; (Windows) ou : (Linux, Mac) para separar as entradas.<br>Caminhos que n\u00E3o sejam absolutos ser\u00E3o considerados relativos \u00E0 pasta de instala\u00E7\u00E3o do Freeplane.</html>
 OptionPanel.script_user_key_name_for_signing=Chave de utilizador opcional para assinatura
-OptionPanel.script_user_key_name_for_signing.tooltip=<html>Se quer assinar os seus scripts, introduza a chave alternativa aqui.<br>Espera-se que a chave resida no armaz\u00E9m predefinido.<br>A palavra-passe da chave secretatem de coincidir com a palavra-passe de armaz\u00E9m (esta \u00E9 a predefini\u00E7\u00E3o).</html>
+OptionPanel.script_user_key_name_for_signing.tooltip=<html>Se quer assinar os seus scripts, introduza a chave alternativa aqui.<br>Espera-se que a chave resida no armaz\u00E9m predefinido.<br>A palavra-passe da chave secreta tem de coincidir com a palavra-passe de armaz\u00E9m (esta \u00E9 a predefini\u00E7\u00E3o).</html>
 OptionPanel.scrollbar_increment=Velocidade
 OptionPanel.scrolling_speed=Velocidade de desloca\u00E7\u00E3o autom\u00E1tica
 OptionPanel.selection_method=M\u00E9todo de selec\u00E7\u00E3o
@@ -1173,7 +1179,7 @@ OptionPanel.separator.data_formats=Formata\u00E7\u00E3o e an\u00E1lise de dados
 OptionPanel.separator.default_colors=Cores predefinidas
 OptionPanel.separator.default_fonts=Tipo de letra predefinido
 OptionPanel.separator.default_styles=Estilos predefinidos
-OptionPanel.separator.EdgeControls=Limites
+OptionPanel.separator.EdgeControls=Liga\u00E7\u00F5es
 OptionPanel.separator.edit_long_node_window=Editar em janela
 OptionPanel.separator.editing=Defini\u00E7\u00F5es do editor
 OptionPanel.separator.export=Exportar
@@ -1290,8 +1296,8 @@ OptionPanel.undo_levels=N\u00EDveis de "Desfazer"
 OptionPanel.undo_levels.tooltip=<html>Determina quantos comandos ser\u00E3o gravados para desfazer.</html>
 OptionPanel.unfold_on_paste=Desdobrar o n\u00F3 ao colar
 OptionPanel.unfold_on_paste.tooltip=Desdobrar o n\u00F3 ao colar ou Arrastar-e-Largar
-OptionPanel.use_common_out_point_for_root_node=Os limites come\u00E7am num ponto do n\u00F3-raiz
-OptionPanel.use_common_out_point_for_root_node.tooltip=Os limites come\u00E7am num ponto do n\u00F3-raiz
+OptionPanel.use_common_out_point_for_root_node=As liga\u00E7\u00F5es come\u00E7am num ponto do n\u00F3-raiz
+OptionPanel.use_common_out_point_for_root_node.tooltip=As liga\u00E7\u00F5es come\u00E7am num ponto do n\u00F3-raiz
 OptionPanel.use_tabbed_pane=Utilizar separadores
 OptionPanel.use_tabbed_pane.tooltip=Se marcada os mapas s\u00E3o exibidos em separadores (como no FireFox :-) ).
 OptionPanel.user_defined_screen_resolution=Resolu\u00E7\u00E3o de ecr\u00E3 definida pelo utilizador (DPI)
@@ -1686,7 +1692,7 @@ simplyhtml.valignMiddle=ao centro
 simplyhtml.valignTop=em cima
 simplyhtml.wholeWordsOnly=S\u00F3 palavras inteiras
 simplyhtml.wholeWordsOnly.tooltip=Restringir coincid\u00EAncias a palavras inteiras.
-SortNodes.text=&Ordenar n\u00F3&s-filho
+SortNodes.text=Ordenar n\u00F3&s-filho
 SortNodes.tooltip=Ordena alfabeticamente todos os n\u00F3s-filho.
 split=Dividir
 SplitConditionAction.text=Dividir
