--- a/freeplane/viewer-resources/translations/Resources_en.properties
+++ b/freeplane/viewer-resources/translations/Resources_en.properties
@@ -1052,6 +1052,8 @@ OptionPanel.language=Language
 OptionPanel.language.tooltip=<html>This is the language that should be used in the program. 'automatic' tries to load the current user's language. </html>
 OptionPanel.last=Last
 OptionPanel.last_opened_list_length=Last opened list length
+OptionPanel.latex_disable_editor=Disable LaTeX Syntax Highlighting Editor
+OptionPanel.latex_disable_editor.tooltip=Check this if you're having problems with the LaTeX editor
 OptionPanel.latex_editor_font=Font for LaTeX Syntax Highlighting Editor
 OptionPanel.latex_editor_font.tooltip=Use 'Dialog' or 'Monospaced' if you need unicode chars!
 OptionPanel.latex_editor_font_size=Font size for LaTeX Syntax Highlighting Editor
