--- a/freeplane/resources/translations/Resources_de.properties
+++ b/freeplane/resources/translations/Resources_de.properties
@@ -1758,6 +1758,7 @@ UnfoldAllAction.text=Zweig &aufklappen
 UnfoldAllAction.tooltip=<html>Klappt die Unterknoten des selektierten Zweigs auf</html>
 UnfoldOneLevelAction.text=Weitere Ebene aufklappen
 UnfoldOneLevelAction.tooltip=<html>Klappt in selektiertem Zweig eine weitere Ebene auf</html>
+unparsedLatexPatternFormat=LaTeX f\u00fcr Export
 up=Auf
 UpConditionAction.text=Auf
 update_failed=Update ist fehlgeschlagen mit der Meldung {0}
