--- a/freeplane/resources/translations/Resources_fr.properties
+++ b/freeplane/resources/translations/Resources_fr.properties
@@ -405,7 +405,7 @@ filter_is_not_equal_to=est diff\u00E9rent de
 filter_leaf=N\u0153uds de dernier niveau
 filter_link=Lien
 filter_match_approximately=Accepter les variantes
-filter_match_approximately_tooltip=Rechercher les variantes des mots.<br>Par exemple : rechercher 'fihcier' trouvera 'fichier'.
+filter_match_approximately_tooltip=Rechercher les variantes des mots.<br/>Par exemple : rechercher 'fihcier' trouvera 'fichier'.
 filter_match_case=Respecter la casse
 filter_match_case_tooltip=Rechercher en respectant les majuscules / minuscules
 filter_modified_after=modifi\u00E9 apr\u00E8s
@@ -800,7 +800,7 @@ NameConditionAction.text=Nommer le filtre...
 NavigationNextMapAction.text=Carte suivante
 NavigationPreviousMapAction.text=Carte pr\u00E9c\u00E9dente
 new=Nouveau...
-new_map_from_user_templates.text=Nouvelle carte \u00E0 partir de...
+new_map_from_user_templates.text=Nouvelle carte \u00E0 partir d'une carte existante...
 new_mindmap=Nouvelle carte
 new_node=Nouveau n\u0153ud
 new_node_as_sibling_not_possible_for_the_root=Impossible de cr\u00E9er un n\u0153ud fr\u00E8re pour la racine
@@ -1414,7 +1414,7 @@ RedoFilterAction.text=Filtre suivant
 regular_expressions=Expressions r\u00E9guli\u00E8res
 ReminderHookAction.text=Supprimer l'alerte
 ReminderHookAction.tooltip=Supprime l'alerte d'un n\u0153ud
-remove_file_from_list_on_error=Le fichier {0} est introuvable !<br>Souhaitez-vous le retirer de la liste des fichiers r\u00E9cents ?
+remove_file_from_list_on_error=Le fichier {0} est introuvable ! Souhaitez-vous le retirer de la liste des fichiers r\u00E9cents ?
 remove_shortcut_question=Remplacer le raccourci ?
 RemoveAllIconsAction.text=Supprimer toutes les ic\u00F4nes
 RemoveConnectorAction.text=Supprimer le connecteur
