--- a/freeplane/resources/translations/Resources_nl.properties
+++ b/freeplane/resources/translations/Resources_nl.properties
@@ -1015,6 +1015,9 @@ OptionPanel.fr=Frans  / Fran\u00E7ais
 OptionPanel.gl=Galicisch / Galego
 OptionPanel.goto_note_end_on_edit=Veplaats notietiecursor naar het eind
 OptionPanel.grid_size=Raster afstand
+OptionPanel.groovy_editor_font=Lettertype voor Groovy Syntax Highlighting Editor
+OptionPanel.groovy_editor_font.tooltip=Gebruik 'Dialog' of 'Monospaced'als je unicode karakters nodig hebt!
+OptionPanel.groovy_editor_font_size=Lettergrootte voor Groovy Syntax Highlighting Editor
 OptionPanel.gtk=Gtk
 OptionPanel.hide_edge=Verborgen
 OptionPanel.highlight_formulas=Accentueren furmules
@@ -1049,6 +1052,11 @@ OptionPanel.language=Taal
 OptionPanel.language.tooltip=<html> Dit is de taal die het programma zou moeten gebruiken. 'Automatisch' probeert de huidige taal van de gebruiker te laden.</html>
 OptionPanel.last=Laatste
 OptionPanel.last_opened_list_length=Lengte van de lijst van recent geopende bestanden
+OptionPanel.latex_disable_editor=Uitschakelen LaTeX Syntax Highlighting Edidtor
+OptionPanel.latex_disable_editor.tooltip=Controleer dit als je problemen hebt met de LaTeX editor
+OptionPanel.latex_editor_font=Lettertype voor LaTeX Syntax Highlighting Editor
+OptionPanel.latex_editor_font.tooltip=Gebruik 'Dialog'of 'Monospaced'als je unicode karakters nodig hebt!
+OptionPanel.latex_editor_font_size=Lettergrootte voor LaTeX Syntax Highlighting Editor
 OptionPanel.latex_macros=Algemene LaTeX Macros
 OptionPanel.layout_map_on_text_change=Map layout bij bewerken
 OptionPanel.layout_map_on_text_change.tooltip=Schakel uit voor betere werking
