--- a/freeplane/resources/translations/Resources_pt_BR.properties
+++ b/freeplane/resources/translations/Resources_pt_BR.properties
@@ -1016,6 +1016,9 @@ OptionPanel.fr=Fran\u00E7a
 OptionPanel.gl=Galego
 OptionPanel.goto_note_end_on_edit=Mova o cursor de nota para o final
 OptionPanel.grid_size=Tamanho da lacuna de grade
+OptionPanel.groovy_editor_font=Fonte para editor Groovy Syntax Highlighting
+OptionPanel.groovy_editor_font.tooltip=Usar 'Dialog' ou 'Monospaced' se voc\u00EA necessita caracteres unicode!
+OptionPanel.groovy_editor_font_size=Tamanho da fonte para editor Groovy Syntax Highlighting
 OptionPanel.gtk=GTK
 OptionPanel.hide_edge=Ocultar a borda
 OptionPanel.highlight_formulas=Destacar f\u00F3rmulas
@@ -1050,6 +1053,11 @@ OptionPanel.language=Idioma
 OptionPanel.language.tooltip=<html>Este \u00E9 o idioma que ser\u00E1 usado no programa. Tenta 'automaticamente' carregar o idioma do usu\u00E1rio atual. </html>
 OptionPanel.last=\u00DAltimo
 OptionPanel.last_opened_list_length=Comprimento da \u00FAltima lista de arquivos abertos
+OptionPanel.latex_disable_editor=Desativar editor LaTeX Syntax Highlighting
+OptionPanel.latex_disable_editor.tooltip=Marque esta op\u00E7\u00E3o se voc\u00EA est\u00E1 tendo problemas com o editor LaTeX
+OptionPanel.latex_editor_font=Fonte para LaTeX Syntax Highlighting
+OptionPanel.latex_editor_font.tooltip=Usar 'Dialog' ou 'Monospaced' se voc\u00EA necessita de caracteres unicode!
+OptionPanel.latex_editor_font_size=Tamanho da fonte para editor LaTeX Syntax Highlighting
 OptionPanel.latex_macros=Macros comuns LaTeX
 OptionPanel.layout_map_on_text_change=Mapa de layout durante a edi\u00E7\u00E3o
 OptionPanel.layout_map_on_text_change.tooltip=Desabilitar para melhorar o desempenho
