--- a/freeplane/resources/translations/Resources_da.properties
+++ b/freeplane/resources/translations/Resources_da.properties
@@ -42,11 +42,14 @@ AddOnDetailsPanel.homepage=Hjemmeside:
 addons.installer.canceled=Installation afbrudt
 addons.installer.confirm.licence=<html><body><h1>Licens</h1>{0}<p><p><em>Accepterer du denne licens?</em></p></body></html>
 addons.installer.failed=Installation fejlede: {0}
+addons.installer.freeplaneversion.format.error=Formatfejl i {0} (v\u00E6rdi: {1})
 addons.installer.install=Installer
 addons.installer.invalid.keyboard.shortcut=Ikke brugbar genvej {0}.
 addons.installer.licence.unchanged=Licens er u\u00E6ndret
 addons.installer.map.structure=Fejl i kort struktur: {0}
 addons.installer.missing.child.nodes=Manglende under knuder: {0}
+addons.installer.script.no.permissions=Ingen tilladelser defineret for {0}
+addons.installer.update=Opdater fra version {0}
 antialias_all=Antialias alt
 antialias_edges=Antialias kanter
 antialias_none=Antialias None[translate me]
@@ -837,7 +840,11 @@ WebDocuAction.text=Web Dokumentation
 width=Bredde
 xslt_export.latex=Latex dokument
 xslt_export.latexbook=Latex bog
+xslt_export.ms_excel=Microsoft Excel 2003 XML
+xslt_export.ms_project=Microsoft Project 2003 XML
+xslt_export.ms_word=Microsoft Word 2003 XML
 xslt_export.text=Br\u00F8dtekst
+xslt_export_not_possible=Freeplane XSLT eksportering er ikke mulig
 yes=Ja
 ZoomInAction.text=Zoom ind
 ZoomOutAction.text=Zoom ud
