--- a/freeplane/resources/translations/Resources_ja.properties
+++ b/freeplane/resources/translations/Resources_ja.properties
@@ -1052,6 +1052,8 @@ OptionPanel.language=\u8A00\u8A9E
 OptionPanel.language.tooltip=\u3053\u306E\u30D7\u30ED\u30B0\u30E9\u30E0\u3067\u4F7F\u7528\u3059\u308B\u8A00\u8A9E\u3067\u3059\u3002\u300C\u81EA\u52D5\u9078\u629E\uFF0Fautomatic\u300D\u306F\u30E6\u30FC\u30B6\u304C\u73FE\u5728\u4F7F\u7528\u4E2D\u306E\u8A00\u8A9E\u3092\u6307\u5B9A\u3057\u307E\u3059\u3002
 OptionPanel.last=\u672B\u5C3E
 OptionPanel.last_opened_list_length=\u6700\u8FD1\u4F7F\u3063\u305F\u30D5\u30A1\u30A4\u30EB\u306E\u8868\u793A\u6570
+OptionPanel.latex_disable_editor=LaTex\u30B7\u30F3\u30BF\u30C3\u30AF\u30B9\u30CF\u30A4\u30E9\u30A4\u30C8\u30A8\u30C7\u30A3\u30BF\u3092\u7121\u52B9\u306B
+OptionPanel.latex_disable_editor.tooltip=LaTex\u30A8\u30C7\u30A3\u30BF\u306B\u554F\u984C\u304C\u3042\u308B\u5834\u5408\u306B\u30C1\u30A7\u30C3\u30AF\u3092\u3064\u3051\u3066\u304F\u3060\u3055\u3044\u3002
 OptionPanel.latex_editor_font=LaTeX\u30B7\u30F3\u30BF\u30C3\u30AF\u30B9\u30CF\u30A4\u30E9\u30A4\u30C8\u30A8\u30C7\u30A3\u30BF\u306E\u30D5\u30A9\u30F3\u30C8
 OptionPanel.latex_editor_font.tooltip=Unicode\u6587\u5B57\u304C\u5FC5\u8981\u306A\u3089 'Dialog' \u304B 'Monospaced' \u3092\u4F7F\u7528\u3057\u3066\u304F\u3060\u3055\u3044\uFF01
 OptionPanel.latex_editor_font_size=LaTeX\u30B7\u30F3\u30BF\u30C3\u30AF\u30B9\u30CF\u30A4\u30E9\u30A4\u30C8\u30A8\u30C7\u30A3\u30BF\u306E\u30D5\u30A9\u30F3\u30C8\u30B5\u30A4\u30BA
